[gd_scene format=3 uid="uid://j5tbbfvkq2v2"]

[ext_resource type="Script" uid="uid://c6ry6gfdx54gk" path="res://scripts/bag_ui.gd" id="1_ip1la"]

[node name="BagUI" type="Control" unique_id=1323824443]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ip1la")

[node name="LabelTitle" type="Label" parent="." unique_id=1056578449]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -471.0
offset_bottom = -413.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 42
text = "Bag Battler - Test du Sac"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelBagInfo" type="Label" parent="." unique_id=1745812560]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -405.0
offset_bottom = -360.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "Sac: 0 jetons"
horizontal_alignment = 1

[node name="ButtonDraw" type="Button" parent="." unique_id=755668552]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -142.0
offset_top = 317.0
offset_right = 142.0
offset_bottom = 383.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 42
text = "Tirer un jeton"

[node name="ButtonReset" type="Button" parent="." unique_id=822512083]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -47.0
offset_top = 395.0
offset_right = 47.0
offset_bottom = 448.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.92941177, 0.24313726, 0.105882354, 1)
theme_override_font_sizes/font_size = 32
text = "Reset"

[node name="LabelDrawnToken" type="Label" parent="." unique_id=1717475018]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 10.0
offset_top = -298.0
offset_right = 10.0
offset_bottom = -253.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "Dernier jeton tir√©: -"
horizontal_alignment = 1

[node name="CombatLine" type="HBoxContainer" parent="." unique_id=220632362]
custom_minimum_size = Vector2(1200, 300)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5046296
anchor_right = 0.5
anchor_bottom = 0.5046296
offset_left = -600.0
offset_top = -150.0
offset_right = 600.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
metadata/_edit_use_anchors_ = true
