extends Control

# On vient cr√©er des variables et les lier aux diff√©rents √©l√©ments de l'UI
@onready var label_bag_info = $LabelBagInfo
@onready var label_drawn_token = $LabelDrawnToken
@onready var button_draw = $ButtonDraw
@onready var button_reset = $ButtonReset
@onready var combat_line = $CombatLine 

@onready var label_attack_total = $LabelAttackTotal
@onready var label_defense_total = $LabelDefenseTotal
@onready var label_hazard_warning = $LabelHazardWarning

# On charge la scene du jeton virtuel
var token_card_scene = preload("res://token_card.tscn")

# On importe le noeud de gestionnaire de sac
var bag_manager = BagManager

func _ready():
	bag_manager = BagManager.new() # On cr√©e le BagManager
	add_child(bag_manager)
	
	# On charge les jetons
	var sword = load("res://resources/tokens/basic-sword.tres")
	var shield = load("res://resources/tokens/shield.tres")
	var skull = load("res://resources/tokens/hazard.tres")
	
	# On rempli le sac de d√©part pour la classe simple
	bag_manager.add_tokens(sword, 4)
	bag_manager.add_tokens(shield, 3)
	bag_manager.add_tokens(skull, 2)
	bag_manager.shuffle()
	
	# On connecte les boutons aux fonctions. .pressed = Signal √©mis, .connect = Connecte le signal √† une fonction, (...) = la fonction √† appelerr
	button_draw.pressed.connect(_on_button_draw_pressed)
	button_reset.pressed.connect(_on_button_reset_pressed)
	# Met √† jour l'affichage
	update_ui()

# Fonction appel√©e quand on clique sur "Tirer un jeton"
func _on_button_draw_pressed():
	var token = bag_manager.draw_token()
	
	if token != null:
		# Met √† jour le texte
		var type_name = TokenResource.TokenType.keys()[token.token_type]
		label_drawn_token.text = "Dernier jeton tir√©: %s (%s, Valeur: %d)" % [token.token_name, type_name, token.value]
		
		# Cr√©e une carte visuelle et l'ajoute √† la ligne
		var card = token_card_scene.instantiate() # Cr√©e une nouvelle instance de la carte
		combat_line.add_child(card) # Ajoute la carte √† la ligne de combat (elle appara√Æt √† l'√©cran)
		card.setup(token) # Configure la carte avec les donn√©es du jeton tir√©
	else:
		label_drawn_token.text = "‚ö†Ô∏è Le sac est vide !"
	# Met √† jour l'affichage
	update_ui()
	
# Fonction appel√©e quand on clique sur "Reset"
func _on_button_reset_pressed():
	bag_manager.reset_bag()
	label_drawn_token.text = "Dernier jeton tir√© : - "
	
	# Supprime toutes les cartes de la ligne
	for child in combat_line.get_children():
		child.free()
	
	# Met √† jour l'affichage
	update_ui()

# Met √† jour l'affichage du nombre de jetons
func update_ui():
	var attack_count = bag_manager.bag.filter(func(t): return t.token_type == TokenResource.TokenType.ATTACK).size()
	var defense_count = bag_manager.bag.filter(func(t): return t.token_type == TokenResource.TokenType.DEFENSE).size()
	var hazard_count = bag_manager.bag.filter(func(t): return t.token_type == TokenResource.TokenType.HAZARD).size()
	
	label_bag_info.text = "üì¶ Sac: %d jetons (‚öîÔ∏è %d | üõ°Ô∏è %d | üíÄ %d)" % [bag_manager.bag.size(), attack_count, defense_count, hazard_count]
	update_combat_line_totals()
	
# Calcule et affiche les totaux de la ligne de combat
func update_combat_line_totals():
	var total_attack = 0
	var total_defense = 0
	var hazard_count = 0
	
	# On parcourt chaque carte pr√©sente sur la ligne de combat
	for card in combat_line.get_children():
		# On r√©cup√®re l'ic√¥ne de la carte pour savoir son type
		var icon = card.get_node("VBoxContainer/LabelIcon").text
		# On r√©cup√®re la valeur de la carte et on la convertit en nombre
		var value = int(card.get_node("VBoxContainer/LabelValue").text)
		
		# On additionne dans le bon compteur selon le type
		if icon == "‚öîÔ∏è":
			total_attack += value
		elif icon == "üõ°Ô∏è":
			total_defense += value
		elif icon == "üíÄ":
			hazard_count += 1
	
	# Met √† jour le label d'attaque (ic√¥ne + valeur)
	label_attack_total.text = "‚öîÔ∏è %d" % total_attack
	
	# Met √† jour le label de d√©fense (ic√¥ne + valeur)
	label_defense_total.text = "üõ°Ô∏è %d" % total_defense
	
	# Met √† jour le label d'avertissement selon le nombre de hazards
	if hazard_count == 0:
		label_hazard_warning.text = ""  # Rien √† afficher si pas de hazard
	elif hazard_count == 1:
		label_hazard_warning.text = "‚ö†Ô∏è 1 Hazard - Attention!"
	else:  # 2 hazards ou plus
		label_hazard_warning.text = "üíÄ CRASH! (%d Hazards)" % hazard_count
